--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -20,40 +20,7 @@
 
   <section class="search-section">
     <h2>Encuentra tu propiedad ideal</h2>
-    <form class="search-form" [formGroup]="form" (submit)="onSumbit()">
-
-      <fieldset class="form-group">
-        <label for="operation">Tipo de Operación</label>
-        <select id="operation" formControlName="operationTypes">
-          <option value="" disabled selected>-- Selecciona un tipo --</option>
-          @for (ot of operationTypeArray; track $index ){
-          <option>{{ot.operationName}}</option>
-          }
-        </select>
-      </fieldset>
-
-      <fieldset class="form-group">
-        <label for="property-type">Tipo de Propiedad</label>
-        <select id="property-type" formControlName="propertyTypes">
-          <option value="" disabled selected>-- Selecciona un tipo --</option>
-          @for (pt of propertyTypesArray; track $index) {
-          <option>{{pt.typeName}}</option>
-          }
-        </select>
-      </fieldset>
-
-      <fieldset class="form-group">
-        <label for="location">Ubicación</label>
-        <select id="location" formControlName="zone">
-          <option value="" disabled selected>-- Selecciona un tipo --</option>
-          @for (z of zoneArray; track $index) {
-          <option>{{z.zoneName}}</option>
-          }
-        </select>
-      </fieldset>
-
-      <button [disabled]="form.invalid" type="submit" class="btn-search" (click)="makeFilter()" >Buscar</button>
-    </form>
+    <app-filter-home></app-filter-home>
   </section>
 
   <section class="featured-section">
