--- a/src/app/components/form-property/form-property.html
+++ b/src/app/components/form-property/form-property.html
@@ -34,6 +34,12 @@
                 </div>
 
                 <div class="form-group">
+                        <select name="location" required>
+                        <option value="">Seleccionar...</option>
+                        @for (i of zones; track $index) {
+                        <option value="{{i.zoneName}}">{{i.zoneName}}</option>
+                        }
+                    </select>
                     <label>Ubicación <span class="required">*</span></label>
                     <input type="text" name="location" required>
                 </div>
